third_party/move/move-compiler-v2/tests/checking/inlining/cool_inlining_test.exp

Diagnostics:
error: no function named `beans` found
   ┌─ tests/checking/inlining/cool_inlining_test.move:15:17
   │
15 │         foo(| | beans())
   │                 ^^^^^^^
